@@ -1,3 +1,15 @@
+2018-07-10  Dewei Zhu  <dewei_zhu@apple.com>
+
+        Update ARES-6.patch file accordingly for r233631.
+        https://bugs.webkit.org/show_bug.cgi?id=187534
+
+        Reviewed by Saam Barati.
+
+        Update ARES-6.patch file acoordingly after ARES-6 plan file change to
+        avoid warning while applying the patch.
+
+        * Scripts/webkitpy/benchmark_runner/data/patches/webserver/ARES-6.patch:
+
 2018-07-10  Tim Horton  <timothy_horton@apple.com>
 
         doAfterNextPresentationUpdate should not be called while content is hidden due to animated resize
